# OCRTest

./: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  Document.cpp  Document.h  ImageDocument.cpp  ImageDocument.h  PDFDocument.cpp  PDFDocument.h  README.MD  README.md  SACUtil.cpp  SACUtil.h  SubWidget.cpp  SubWidget.h  main.cpp  ocrtest.cpp  ocrtest.h  ocrtest.ui  readme.txt  stdafx.h
